--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: pnpm
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.15.0
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Configure Pages
         uses: actions/configure-pages@v5
@@ -37,10 +42,10 @@ jobs:
           static_site_generator: next
 
       - name: Build Next.js app
-        run: npm run build
+        run: pnpm run build:pages
 
       - name: Export static site
-        run: npm run export
+        run: pnpm run export:pages
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -57,4 +62,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
